--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                     <button type="submit" class="btn btn-lg btn-primary">Login</button>
                 </div>
                 <hr>
-                <a href="#">Forgot Password</a>
+                <!-- <a href="#">Forgot Password</a> -->
             </form>
         </div>
     </div>
