--- a/login.html
+++ b/login.html
@@ -13,24 +13,39 @@
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-    <div id="login-div">
-        <div id="login-form-div">
-            <center><img id="login-logo" src="assets/sample-logo.png" alt="logo"></center>
-            <form action="" id="loginForm">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="usernameInput" name="username" placeholder="Username" required>
+
+    <div class="container">
+        <div class="row" id="login">
+            <div class="col-6" id="loginContainer">
+                <h3>Login</h3><hr>
+                <form action="" id="loginForm">
+                    <div class="mb-3">
+                        <label for="username" class="form-label"><i class="fa fa-user"></i> Your Username</label>
+                        <input type="text" class="form-control" id="usernameInput" name="username" placeholder="Username" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="projectDescription" class="form-label"><i class="fa fa-lock"></i> Your Password</label>
+                        <input type="password" class="form-control" id="passwordInput" name="password" placeholder="Password" required>
+                    </div>
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn btn-lg btn-secondary">Login</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-6" id="loginImgContainer">
+                <div id="loginOverview" style="">
+                    <h1>Project <br>Management <br> System</h1><hr>
+                    <p>Developed by: LJ Ensomo</p>
+                    <!--
+                    <p>
+                        This application was developed by <strong>LJ Ensomo</strong> for the purpose of 
+                        properly managing all of his projects that will be created either for personal or client based.
+                        This system would include the management of the details of the projects, functionalities, scopes, 
+                        and includes ticketing to handle support when the application incase is implemented. The idea of the 
+                        project have started on year 2023 and sstill ongoing currently.
+                    </p> -->
                 </div>
-                <div class="mb-3">
-                    <label for="projectDescription" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="passwordInput" name="password" placeholder="Password" required>
-                </div>
-                <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-lg btn-primary">Login</button>
-                </div>
-                <hr>
-                <!-- <a href="#">Forgot Password</a> -->
-            </form>
+            </div>
         </div>
     </div>
 
